--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  }
-"main": "nodserver.js"
+  },
+ "scripts": {
+  "start": "nodserver.js"  
+  },
+
+  "main": "nodserver.js"
 }
